shorted avatar side bar

--- a/5051/Views/Kiosk/Index.cshtml
+++ b/5051/Views/Kiosk/Index.cshtml
@@ -95,7 +95,7 @@
                         <div class="kioskModule" id="avatarsidebar">
                             <div id="box">
                                 <center>
-                                    <img id="avatar" style="display:none;" class="img-responsive" />
+                                    <img id="avatar" style="display:none;" />
                                     <h2></h2>
                                 </center>
                             </div>
