--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -306,14 +306,6 @@ a.navbar-brand {
     color: #3e4444;
 }
 
-#avatar {
-    border: 10px solid white;
-    border-radius: 200px;
-    padding: 10px;
-    width: 70%;
-    height: auto;
-}
-
 #avatar-white {
     border: 4px solid white;
     border-radius: 150px;
@@ -341,8 +333,15 @@ a.navbar-brand {
     text-align: center;
 }
 
+#avatar {
+    border: 10px solid #fff;
+    border-radius: 200px;
+    padding: 10px;
+    width: 65%;
+}
+
 #avatarsidebar {
-    height: 500px;
+    height: 450px;
     margin-bottom: 30px;
 }
 
@@ -406,13 +405,26 @@ a.navbar-brand {
     height: 550px;
     padding-top: 20rem;
     padding-bottom: 20rem;
-    background: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,.1)), url("../Content/img/headerbg.png");
+    background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.0)), url("../Content/img/headerbg.png");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    color: white;
+    color: #3e4444;
     text-align: center;
+    font-size: 4em;
 }
+
+    .masthead h1 {
+        font-family: 'Catamaran';
+        font-weight:700;
+        font-size:1.5em;
+    }
+
+    .masthead h3 {
+        font-family: 'Catamaran';
+        font-weight: 700;
+        font-size: 0.8em;
+    }
 
 
 .intro {
