--- a/5051/Views/Student/Community.cshtml
+++ b/5051/Views/Student/Community.cshtml
@@ -10,7 +10,9 @@
 <div class="background" id="community">
     <div class="row text-center">
         <h1 class="student-header" align="center">Community</h1>
-
+        <div id="main-menu-student" class="col-md-9 pull-right">
+            @Html.ActionLink("Student Menu", "Index", "Portal", null, new { @class = "btn btn-primary" })
+        </div>
         <div id="studentnavicons">
             <a href="~/Student/Default" title="Store"><i class="fas fa-store-alt"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
