--- a/5051/Views/Student/Market.cshtml
+++ b/5051/Views/Student/Market.cshtml
@@ -29,6 +29,9 @@
 <div class="background">
     <div class="row text-center">
         <h1 class="student-header" align="center">Marketplace</h1>
+        <div id="main-menu-student" class="col-md-9 pull-right">
+            @Html.ActionLink("Student Menu", "Index", "Portal", null, new { @class = "btn btn-primary" })
+        </div>
         <div id="studentnavicons">
             <a href="~/Student/MarketAfter" title="Store"><i class="fas fa-store-alt"></i></a>
             <a href="~/Student/Community" title="Community"><i class="fas fa-map-signs"></i></a>
