--- a/5051/Content/Site.css
+++ b/5051/Content/Site.css
@@ -447,6 +447,9 @@ a.navbar-brand {
 
 /*-----------Intro Student, Admin, Kiosk pages----------*/
 
+.bgcolor-intro {
+    background-color: #cfaf58;
+}
 .intro-h2 {
     margin-top: 100px;
     color: #fff;
@@ -454,35 +457,37 @@ a.navbar-brand {
 }
 
 .intro-container {
-    width: 650px;
+    width: 600px;
     margin: auto;
+    
 }
 
 .intro-p {
     margin-top: 20px;
-    margin-bottom:60px;
-    color:#ffffff;
+    margin-bottom: 60px;
+    color: #ffffff;
     font-size: 1.2em;
+    text-align: justify;
 }
 
 .progress-h3 {
     margin-top: 50px;
-    color: #f39c12;
+    color: #3e4444;
 }
 
 .game-h3 {
-    color: #76c2af;
+    color: #3e4444;
 }
 
 .manage-students-h3 {
     margin-top: 50px;
-    color: #ba1010;
+    color: #3e4444;
 }
 
 .override-calendar-h3 {
-    color: #f6871f;
+    color: #3e4444;
 }
 
 .kiosk-h3 {
-    color: #68b2ee;
+    color: #3e4444;
 }
