--- a/5051/Views/Student/Report.cshtml
+++ b/5051/Views/Student/Report.cshtml
@@ -27,7 +27,9 @@
                 <button class="w3-bar-item w3-button w3-white" onclick="openTab('Year')">Year</button>
                 <button class="w3-bar-item w3-button w3-white" onclick="openTab('Shops')">My Shops</button>
             </div>
-
+            <div id="main-menu-student" class="col-md-9 pull-right">
+                @Html.ActionLink("Student Menu", "Index", "Portal", null, new { @class = "btn btn-primary" })
+            </div>
             <div class="col-md-12">
                 <div id="Month" class="w3-container city">
                     <div class="span5">
@@ -63,10 +65,10 @@
                     </div>
 
                     <div class="w3-content w3-display-container">
-                        <img class="shops" src="~/Content/img/MyShops.png" style="width: 780px; margin-left: 40px;"/>
+                        <img class="shops" src="~/Content/img/MyShops.png" style="width: 780px; margin-left: 40px;" />
                     </div>
                 </div>
-           </div>
+            </div>
         </div>
     </div>
 </div>
